add new output strategy transform output