@@ -4,6 +4,7 @@ import com.github.jqudt.Unit;
 import org.streampipes.container.api.ResolvesContainerProvidedOptions;
 import org.streampipes.model.graph.DataProcessorDescription;
 import org.streampipes.model.graph.DataProcessorInvocation;
+import org.streampipes.model.runtime.RuntimeOptions;
 import org.streampipes.model.schema.EventProperty;
 import org.streampipes.model.schema.EventPropertyPrimitive;
 import org.streampipes.model.schema.PropertyScope;
@@ -16,6 +17,7 @@ import org.streampipes.sdk.helpers.Labels;
 import org.streampipes.sdk.helpers.OutputStrategies;
 import org.streampipes.sdk.helpers.SupportedFormats;
 import org.streampipes.sdk.helpers.SupportedProtocols;
+import org.streampipes.sdk.helpers.TransformOperations;
 import org.streampipes.units.UnitProvider;
 import org.streampipes.wrapper.flink.FlinkDataProcessorDeclarer;
 import org.streampipes.wrapper.flink.FlinkDataProcessorRuntime;
@@ -55,7 +57,8 @@ public class MeasurementUnitConverterController extends
                         "measurement", ""), "convert-property")
                 .supportedProtocols(SupportedProtocols.kafka())
                 .supportedFormats(SupportedFormats.jsonFormat())
-                .outputStrategy(OutputStrategies.keep())
+                .outputStrategy(OutputStrategies.transform(TransformOperations
+                        .dynamicMeasurementUnitTransformation("convert-property", OUTPUT_UNIT)))
                 .build();
     }
 
@@ -87,14 +90,23 @@ public class MeasurementUnitConverterController extends
 
 
     @Override
-    public List<String> resolveOptions(String requestId, EventProperty linkedEventProperty) {
+    public List<RuntimeOptions> resolveOptions(String requestId, EventProperty linkedEventProperty) {
         if (linkedEventProperty instanceof EventPropertyPrimitive && ((EventPropertyPrimitive) linkedEventProperty)
                 .getMeasurementUnit() != null) {
             Unit measurementUnit = UnitProvider.INSTANCE.getUnit(((EventPropertyPrimitive) linkedEventProperty)
                     .getMeasurementUnit().toString());
             URI type = measurementUnit.getType();
             List<Unit> availableUnits = UnitProvider.INSTANCE.getUnitsByType(type);
-            return availableUnits.stream().map(unit -> unit.getLabel()).collect(Collectors.toList());
+            return availableUnits.stream().filter(unit -> !(unit.getResource().toString().equals(measurementUnit
+                    .getResource().toString()))).map
+                    (unit -> new
+                    RuntimeOptions
+                    (unit
+                    .getLabel(), unit
+                    .getResource()
+                    .toString()))
+                    .collect(Collectors
+                    .toList());
         } else {
             return new ArrayList<>();
         }
